# mixture

./: .gitignore  Makefile  Makefile.old  dune-project  mixture.opam  mixture.opam.locked  mixture.opam.template
src/: dune  mixture_Applicative.re  mixture_Applicative.rei  mixture_Compare.re  mixture_Compare.rei  mixture_FoldAssoc.re  mixture_FoldAssoc.rei  mixture_FoldRight.re  mixture_FoldRight.rei  mixture_Format.re  mixture_Format.rei  mixture_Monad.re  mixture_Monad.rei  mixture_NumericalFunction.re  mixture_NumericalFunction.rei  mixture_Parse.re  mixture_Parse.rei
testsuite/: dune  testApplicative.re  testMonad.re  unit_testing.re
